--- a/Atraxian/Atraxian.vcxproj
+++ b/Atraxian/Atraxian.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="Renderer.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="SettingsParser.cpp" />
     <ClCompile Include="Taskbar.cpp" />
     <ClCompile Include="Util.cpp" />
   </ItemGroup>
@@ -157,6 +158,7 @@
     <ClInclude Include="Renderer.hpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="SettingsParser.hpp" />
     <ClInclude Include="Taskbar.hpp" />
     <ClInclude Include="Util.hpp" />
   </ItemGroup>
