--- a/Atraxian/Atraxian.vcxproj.filters
+++ b/Atraxian/Atraxian.vcxproj.filters
@@ -55,6 +55,9 @@
     <ClCompile Include="App.cpp">
       <Filter>Source Files\Environment\Maple\App</Filter>
     </ClCompile>
+    <ClCompile Include="SettingsParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Environment.hpp">
@@ -84,5 +87,6 @@
     <ClInclude Include="App.hpp">
       <Filter>Source Files\Environment\Maple\App</Filter>
     </ClInclude>
+    <ClInclude Include="SettingsParser.hpp" />
   </ItemGroup>
 </Project>
